--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="container sourcesans" >
   <div class="row bprinc" style="height:100px">
     <div class= "col-xs-4 col-sm-4 col-md-3" ><img src="imgLogos-01.svg" style="padding-top:10px; margin-left:20px" alt="Syrat" class="img-responsive"></div>
-    <div class= "col-xs-2 col-sm-1 col-md-1  col-xs-offset-6 col-sm-offset-6 col-md-offset-7"><img src="assets/img/imgSLogo.svg" style="margin-top:20px; margin-bottom:10px; margin-right:50px" alt="IMEX" class="img-responsive"></div>
+    <div class= "col-xs-2 col-sm-1 col-md-1  col-xs-offset-6 col-sm-offset-6 col-md-offset-7"><img src="img/imgSLogo.svg" style="margin-top:20px; margin-bottom:10px; margin-right:50px" alt="IMEX" class="img-responsive"></div>
   </div>
 
 <%= form_for @report, :html => {:class => 'form textUppercase'} do |f|  %>
@@ -46,10 +46,15 @@
     <%= f.text_field :noSerie, :class => 'formStyle' %>
     <label style="padding-left: 2px;">no. de serie</label>
   </div>
+
+
+
   <div class="col-xs-2">
-    <%= f.date_select :fechaSiniestro, :class => 'formStyle' %>
+    <%= f.date_select :fechaSiniestro, :class => 'formStyle datepicker' %>
     <label style="padding-left: 2px;">fecha de siniestro</label>
   </div>
+
+
   <div class="col-xs-2">
     <%= f.text_field :nombreAsegurado, :class => 'formStyle'  %>
     <label style="padding-left: 2px;">nombre del asegurado</label>
